--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 </head>
 <body>
     <div class="box"> <span></span>
-        <h1>Hướng Dẫn Chặn Thu Hồi Chứng Chỉ</h1>
+        <div>
+        <h1>Hướng Dẫn Chặn Thu</h1>
+        <h15>Hồi Chứng Chỉ</h15>
+    </div>
         <div id="site-title">
             <span3 class="blogtitle"><h2 class="text2">Manh Tien</h2></span3><span class="typed-cursor">|</span><span3 class="typed-cursor typed-cursor--blink">|</span3>
             <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
@@ -93,7 +96,8 @@
                 The New Certificate 
             <input4 type="button" onclick="window.location.href='https://drive.google.com/file/d/1F-rLcBmiYwwrEFMV3-uejGdp6vOpCG16/view?usp=drive_link'" value=""/>
             <div class="item-media1 ">
-                <img class="app-icon " src="image/Cert.png"></div> 
+                <img class="app-icon " src="image/Cert.png"></div>
+            </h7>
                 <h9><hr></h9>
                 <h11>
                     iPA Free
@@ -113,16 +117,21 @@
                       </a>  
                 </h12>
                 <footer>
-                    <p>Web của <a href="https://www.facebook.com/hahios?mibextid=LQQJ4d">
-                        <h10> 
-                            Hoang Anh
-                        </h10>
+                    <p>Web của 
+                    <h10>
+                        Hoang Anh
+                    </h10>
+                        <a href="https://www.facebook.com/hahios?mibextid=LQQJ4d">
                     </a></p>
+
                     <br>
-                    <p1>Web được tạo © <a href="https://www.facebook.com/hahios?mibextid=LQQJ4d">
-                        <h10> 
-                            Hoang Anh
-                        </h10>
+
+                    <p1>Web được tạo © 
+                    <h10> 
+                        Hoang Anh
+                    </h10>
+
+                        <a href="https://www.facebook.com/hahios?mibextid=LQQJ4d">
                     </a>
                 </p1>
                   </footer>
@@ -132,7 +141,7 @@
                     </svg>
                 </div>
                 <h13>
-                    <input6 type="button" onclick="window.location.href='https://api.nekoo.ru/r/pBvnwGZJ/'" value=""/>
+                    <input6 type="button" onclick="window.location.href='https://api.nekoo.ru/r/dUVGqaCc'" value=""/>
                     <div class="item-media2 ">
                         <img class="app-icon " src="image/Esign.png"></div> 
                     </h13>   
