--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h8><hr></h8>
             <h7>
                 The New Certificate 
-            <input4 type="button" onclick="window.location.href='https://drive.google.com/file/d/1F-rLcBmiYwwrEFMV3-uejGdp6vOpCG16/view?usp=drive_link'" value=""/>
+            <input4 type="button" onclick="window.location.href='https://drive.google.com/file/d/1HQwOv6kZTiviYMH-JwrF4cvh3282wnfb/view?usp=sharing'" value=""/>
             <div class="item-media1 ">
                 <img class="app-icon " src="image/Cert.png"></div>
             </h7>
