--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
                     </svg>
                 </div>
                 <h13>
-                    <input6 type="button" onclick="window.location.href='https://api.nekoo.ru/r/EhRCmsSR/'" value=""/>
+                    <input6 type="button" onclick="window.location.href='#'" value=""/>
                     <div class="item-media2 ">
                         <img class="app-icon " src="image/Esign.png"></div> 
                     </h13>   
                     <h14>
-                        <input7 type="button" onclick="window.location.href='https://api.nekoo.ru/r/UFhHMfBs/'" value=""/>
+                        <input7 type="button" onclick="window.location.href='#'" value=""/>
                         <div class="item-media3 ">
                             <img class="app-icon " src="image/scl.png"></div> 
                         </h14>                 
