--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script>
         $(document).ready(function() {
             var progressPath = document.querySelector('.progress-wrap path');
-            var pathLength = progressPath.getTotalLength(); 
+            var pathLength = progressPath.getTotalLength();
 
             progressPath.style.transition = progressPath.style.WebkitTransition = 'none';
             progressPath.style.strokeDasharray = pathLength + ' ' + pathLength;
@@ -52,11 +52,32 @@
     </script>
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <h15 class="text"><a href="#">Chặn Thu Hồi Chứng Chỉ</a></i></h15>
+
+        <ul class="nav-menu">
+            <li1 class="nav-item">
+                <a href="/index.html" class="nav-link">Trang Chủ</a></li1>
+            <li class="nav-item">
+                <a href="Web Key Spam SmS/webkey.html" class="nav-link">Key Spam SmS</a></li>
+            <li2>Menu</li2>
+            <li3>HoangAnh_DepTrai</li3>
+                <hr>
+                <b>
+                    <hr>
+                </b>    
+        </ul>        
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+</nav>
+</header>
+<script src="script.js"></script>
     <div class="box"> <span></span>
-        <div>
-        <h1>Hướng Dẫn Chặn Thu</h1>
-        <h15>Hồi Chứng Chỉ</h15>
-    </div>
+        <h1>Hướng Dẫn Chặn Thu Hồi Chứng Chỉ</h1>
         <div id="site-title">
             <span3 class="blogtitle"><h2 class="text2">Manh Tien</h2></span3><span class="typed-cursor">|</span><span3 class="typed-cursor typed-cursor--blink">|</span3>
             <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
@@ -94,10 +115,9 @@
             <h8><hr></h8>
             <h7>
                 The New Certificate 
-            <input4 type="button" onclick="window.location.href='https://drive.google.com/file/d/1CDaKu7zk7RX0LWzv1ERnx8qMPgs1tRtZ/view?usp=drivesdk/view?usp=sharing'" value=""/>
+            <input4 type="button" onclick="window.location.href='https://drive.google.com/file/d/1F-rLcBmiYwwrEFMV3-uejGdp6vOpCG16/view?usp=drive_link'" value=""/>
             <div class="item-media1 ">
-                <img class="app-icon " src="image/Cert.png"></div>
-            </h7>
+                <img class="app-icon " src="image/Cert.png"></div> 
                 <h9><hr></h9>
                 <h11>
                     iPA Free
@@ -117,21 +137,16 @@
                       </a>  
                 </h12>
                 <footer>
-                    <p>Web của 
-                    <h10>
-                        Hoang Anh
-                    </h10>
-                        <a href="https://www.facebook.com/hahios?mibextid=LQQJ4d">
+                    <p>Web của <a href="https://www.facebook.com/hahios?mibextid=LQQJ4d">
+                        <h10> 
+                            Hoang Anh
+                        </h10>
                     </a></p>
-
                     <br>
-
-                    <p1>Web được tạo © 
-                    <h10> 
-                        Hoang Anh
-                    </h10>
-
-                        <a href="https://www.facebook.com/hahios?mibextid=LQQJ4d">
+                    <p1>Web được tạo © <a href="https://www.facebook.com/hahios?mibextid=LQQJ4d">
+                        <h10> 
+                            Hoang Anh
+                        </h10>
                     </a>
                 </p1>
                   </footer>
@@ -141,12 +156,12 @@
                     </svg>
                 </div>
                 <h13>
-                    <input6 type="button" onclick="window.location.href='#'" value=""/>
+                    <input6 type="button" onclick="window.location.href='https://api.nekoo.ru/r/pBvnwGZJ/'" value=""/>
                     <div class="item-media2 ">
                         <img class="app-icon " src="image/Esign.png"></div> 
                     </h13>   
                     <h14>
-                        <input7 type="button" onclick="window.location.href='#'" value=""/>
+                        <input7 type="button" onclick="window.location.href='https://api.nekoo.ru/r/WWJysoGO/'" value=""/>
                         <div class="item-media3 ">
                             <img class="app-icon " src="image/scl.png"></div> 
                         </h14>                 
