--- a/Web Key Spam SmS/webkey.html
+++ b/Web Key Spam SmS/webkey.html
@@ -2,12 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no">    
     <title>Key Spam SmS</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link rel="stylesheet" href="webkey.css">
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <h15 class="text"><a href="#">Key Spam SmS</a></i></h15>
+
+        <ul class="nav-menu">
+            <li1 class="nav-item">
+                <a href="/index.html" class="nav-link">Trang Chủ</a></li1>
+            <li class="nav-item">
+                <a href="webkey.html" class="nav-link">Key Spam SmS</a></li>
+            <li2>Menu</li2>
+            <li3>HoangAnh_DepTrai</li3>
+                <hr>
+                <b>
+                    <hr>
+                </b>    
+        </ul>        
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+</nav>
+</header>
+<script src="webkey.js"></script>
+
     <h1>hi</h1>
-    <a href="/index.html">Trang Chủ</a>
+
+    <section>
+    <video class="video-slide active" src= "image/animebackground.mp" autoplay muted loop></video>
+    </section>
 </body>
 </html>
