--- a/Web Key Spam SmS/webkey.html
+++ b/Web Key Spam SmS/webkey.html
@@ -35,10 +35,10 @@
 </header>
 <script src="webkey.js"></script>
 
-    <h1>hi</h1>
-
-    <section>
-    <video class="video-slide active" src= "image/animebackground.mp" autoplay muted loop></video>
-    </section>
+    <h1>Key Spam SmS</h1>
+    <h2>Web đang trong quá trình xây dựng</h2>
+        <br>
+        <h4>Vui lòng quay lại trang chủ</h4>
+    <h3>Loading...</h3>
 </body>
 </html>
