--- a/Web Key Spam SmS/webkey.html
+++ b/Web Key Spam SmS/webkey.html
@@ -35,10 +35,40 @@
 </header>
 <script src="webkey.js"></script>
 
-    <h1>Key Spam SmS</h1>
-    <h2>Web đang trong quá trình xây dựng</h2>
-        <br>
-        <h4>Vui lòng quay lại trang chủ</h4>
-    <h3>Loading...</h3>
+    <h1>Key Spam SmS┊Call</h1>
+    <div id="site-title">
+        <span3 class="blogtitle"><h2 class="text2">Manh Ti3n</h2></span3><span class="typed-cursor">|</span><span3 class="typed-cursor typed-cursor--blink">|</span3>
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+        <script>
+            var typed = new Typed(".blogtitle", {
+                strings: ['<h2 class="text2">Hoang Anh</h2>', '<h2 class="text2">Hoang Anh</h2>'],
+                startDelay: 200,
+                typeSpeed: 100,
+                loop: true,
+                backSpeed: 190,
+                showCursor: true
+            });
+        </script>
+    </div>
+        <hr>
+        <h3>Cảm ơn bạn đã vượt Link</h3>
+        <h4>Đây là Key của bạn.!</h4>
+<div class="copyfield">
+    <span id="link">9536a46136ddf421453e5c2a42fed99</span>
+    <span id="copy-btn">Copy</span>
+</div>
+
+<script>
+var copybtn = document.getElementById("copy-btn");
+var link = document.getElementById("link");
+copybtn.onclick = function () {
+    navigator.clipboard.writeText(link.innerHTML);
+    copybtn.innerHTML = "Copied"
+    setTimeout(function (){
+        copybtn.innerHTML = "Copy"
+    }, 2000)
+}
+</script>
+<h5>Tham Gia Nhóm</h5>
 </body>
 </html>
