--- a/Web Key Spam SmS/webkey.html
+++ b/Web Key Spam SmS/webkey.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, user-scalable=no">    
     <title>Key Spam SmS</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="webkey.css">
 </head>
 <body>
@@ -70,5 +70,24 @@ copybtn.onclick = function () {
 }
 </script>
 <h5>Tham Gia Nhóm</h5>
+<div>
+    <input type="button" onclick="window.location.href='https://drive.google.com/file/d/1F-rLcBmiYwwrEFMV3-uejGdp6vOpCG16/view?usp=drive_link'" value=""/>
+    <i class="fa-brands fa-telegram" style=" font-size: 33px; color: #2189ff;"></i>
+</input>
+</div>
+<footer>
+    <p>Web của <a href="https://www.facebook.com/hahios?mibextid=LQQJ4d">
+        <h10> 
+            Hoang Anh
+        </h10>
+    </a></p>
+    <br>
+    <p1>Web được tạo © <a href="https://www.facebook.com/hahios?mibextid=LQQJ4d">
+        <h10> 
+            Hoang Anh
+        </h10>
+    </a>
+</p1>
+  </footer>
 </body>
 </html>
