--- a/Web Key Spam SmS/webkey.html
+++ b/Web Key Spam SmS/webkey.html
@@ -54,10 +54,9 @@
         <h3>Cảm ơn bạn đã vượt Link</h3>
         <h4>Đây là Key của bạn.!</h4>
 <div class="copyfield">
-    <span id="link">9536a46136ddf421453e5c2a42fed99</span>
+    <span id="link">HoangAnh9e9e5bManhTi3n8e8e4b</span>
     <span id="copy-btn">Copy</span>
 </div>
-
 <script>
 var copybtn = document.getElementById("copy-btn");
 var link = document.getElementById("link");
@@ -75,6 +74,12 @@ copybtn.onclick = function () {
     <i class="fa-brands fa-telegram" style=" font-size: 33px; color: #2189ff;"></i>
 </input>
 </div>
+<h6>
+    Lưu ý: Key của bạn chỉ được một người dùng!
+</h6>
+<h7>
+    <hr>
+</h7>
 <footer>
     <p>Web của <a href="https://www.facebook.com/hahios?mibextid=LQQJ4d">
         <h10> 
