--- a/Web Key Spam SmS/webkey.html
+++ b/Web Key Spam SmS/webkey.html
@@ -70,8 +70,7 @@ copybtn.onclick = function () {
 </script>
 <h5>Tham Gia Nhóm</h5>
 <div>
-    <input type="button" onclick="window.location.href='https://t.me/+yL5rbjlom_42OTRl
-'" value=""/>
+    <input type="button" onclick="window.location.href='https://t.me/+yL5rbjlom_42OTRl'" value=""/>
     <i class="fa-brands fa-telegram" style=" font-size: 33px; color: #2189ff;"></i>
 </input>
 </div>
