--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <h8><hr></h8>
             <h7>
                 The New Certificate 
-            <input4 type="button" onclick="window.location.href='https://drive.google.com/file/d/1F-rLcBmiYwwrEFMV3-uejGdp6vOpCG16/view?usp=drive_link'" value=""/>
+            <input4 type="button" onclick="window.location.href='https://drive.google.com/file/d/1E088wq4fAqu2qxRK2yaaN6VmnSz87tU5/view?usp=drivesdk'" value=""/>
             <div class="item-media1 ">
                 <img class="app-icon " src="image/Cert.png"></div> 
                 <h9><hr></h9>
@@ -157,12 +157,12 @@
                     </svg>
                 </div>
                 <h13>
-                    <input6 type="button" onclick="window.location.href='https://api.nekoo.ru/r/pBvnwGZJ/'" value=""/>
+                    <input6 type="button" onclick="window.location.href='https://vvv.eco/r/AHpkJYLf/'" value=""/>
                     <div class="item-media2 ">
                         <img class="app-icon " src="image/Esign.png"></div> 
                     </h13>   
                     <h14>
-                        <input7 type="button" onclick="window.location.href='https://api.nekoo.ru/r/WWJysoGO/'" value=""/>
+                        <input7 type="button" onclick="window.location.href='https://vvv.eco/r/ihXaJzpv'" value=""/>
                         <div class="item-media3 ">
                             <img class="app-icon " src="image/scl.png"></div> 
                         </h14>                 
