--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="icon" href="image/cha.png" type="image/cert" sizes="19x19">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Chặn Thu Hồi Chứng Chỉ</title>
     <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
@@ -55,7 +54,6 @@
     <header>
         <nav class="navbar">
             <h15 class="text"><a href="#">Chặn Thu Hồi Chứng Chỉ</a></i></h15>
-
         <ul class="nav-menu">
             <li1 class="nav-item">
                 <a href="/index.html" class="nav-link">Trang Chủ</a></li1>
@@ -116,15 +114,17 @@
             <h8><hr></h8>
             <h7>
                 The New Certificate 
-            <input4 type="button" onclick="window.location.href='https://drive.google.com/file/d/1E088wq4fAqu2qxRK2yaaN6VmnSz87tU5/view?usp=drivesdk'" value=""/>
+            <input4 type="button" onclick="window.location.href='https://drive.google.com/file/d/1F-rLcBmiYwwrEFMV3-uejGdp6vOpCG16/view?usp=drive_link'" value=""/>
             <div class="item-media1 ">
                 <img class="app-icon " src="image/Cert.png"></div> 
                 <h9><hr></h9>
+                </h7>
                 <h11>
                     iPA Free
                     <input5 type="button" onclick="window.location.href='https://s.net.vn/04IB'" value=""/>
-                    <i5 class='fa fa-telegram' style='font-size:31px; color:rgb(255, 255, 255)'></i5>
+                    <i5 class='fa fa-telegram' style="font-size:31px; color:rgb(255, 255, 255)"></i5>
                 </h11>
+
                 <h12>
                     Contact
                     <a href="https://www.facebook.com/hahios?mibextid=LQQJ4d">
@@ -138,18 +138,7 @@
                       </a>  
                 </h12>
                 <footer>
-                    <p>Web của <a href="https://www.facebook.com/hahios?mibextid=LQQJ4d">
-                        <h10> 
-                            Hoang Anh
-                        </h10>
-                    </a></p>
-                    <br>
-                    <p1>Web được tạo © <a href="https://www.facebook.com/hahios?mibextid=LQQJ4d">
-                        <h10> 
-                            Hoang Anh
-                        </h10>
-                    </a>
-                </p1>
+                    <p>Web được tạo © Hoang Anh</p>
                   </footer>
                   <div class="progress-wrap">
                     <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
@@ -157,53 +146,15 @@
                     </svg>
                 </div>
                 <h13>
-                    <input6 type="button" onclick="window.location.href='https://vvv.eco/r/AHpkJYLf/'" value=""/>
+                    <input6 type="button1" onclick="window.location.href='https://api.nekoo.ru/r/pBvnwGZJ/'" value="2"/>
                     <div class="item-media2 ">
                         <img class="app-icon " src="image/Esign.png"></div> 
                     </h13>   
                     <h14>
-                        <input7 type="button" onclick="window.location.href='https://vvv.eco/r/ihXaJzpv'" value=""/>
+                        <input7 type="button2" onclick="window.location.href='https://api.nekoo.ru/r/WWJysoGO/'" value="1"/>
                         <div class="item-media3 ">
                             <img class="app-icon " src="image/scl.png"></div> 
-                        </h14>                 
+                        </h14>     
     </div>
-<!-- Code injected by live-server -->
-<script>
-	// <![CDATA[  <-- For SVG support
-	if ('WebSocket' in window) {
-		(function () {
-			function refreshCSS() {
-				var sheets = [].slice.call(document.getElementsByTagName("link"));
-				var head = document.getElementsByTagName("head")[0];
-				for (var i = 0; i < sheets.length; ++i) {
-					var elem = sheets[i];
-					var parent = elem.parentElement || head;
-					parent.removeChild(elem);
-					var rel = elem.rel;
-					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-					}
-					parent.appendChild(elem);
-				}
-			}
-			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-			var address = protocol + window.location.host + window.location.pathname + '/ws';
-			var socket = new WebSocket(address);
-			socket.onmessage = function (msg) {
-				if (msg.data == 'reload') window.location.reload();
-				else if (msg.data == 'refreshcss') refreshCSS();
-			};
-			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-				console.log('Live reload enabled.');
-				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-			}
-		})();
-	}
-	else {
-		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-	}
-	// ]]>
-</script>
 </body>
 </html>
