--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
             <h8><hr></h8>
             <h7>
                 The New Certificate 
-            <input4 type="button" onclick="window.location.href='https://drive.google.com/file/d/1F-rLcBmiYwwrEFMV3-uejGdp6vOpCG16/view?usp=drive_link'" value=""/>
+            <input4 type="button" onclick="window.location.href=
+                '#'
+                " value=""/>
             <div class="item-media1 ">
                 <img class="app-icon " src="image/Cert.png"></div> 
                 <h9><hr></h9>
@@ -146,14 +148,14 @@
                     </svg>
                 </div>
                 <h13>
-                    <input6 type="button1" onclick="window.location.href='https://api.nekoo.ru/r/pBvnwGZJ/'" value="2"/>
+                    <input6 type="button1" onclick="window.location.href='#'" value="2"/>
                     <div class="item-media2 ">
-                        <img class="app-icon " src="image/Esign.png"></div> 
+                        <img class="app-icon " src="image/Esign.jpg"></div> 
                     </h13>   
                     <h14>
-                        <input7 type="button2" onclick="window.location.href='https://api.nekoo.ru/r/WWJysoGO/'" value="1"/>
+                        <input7 type="button2" onclick="window.location.href='#'" value="1"/>
                         <div class="item-media3 ">
-                            <img class="app-icon " src="image/scl.png"></div> 
+                            <img class="app-icon " src="image/Scarlet.jpg"></div> 
                         </h14>     
     </div>
 </body>
