--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h7>
                 The New Certificate 
             <input4 type="button" onclick="window.location.href=
-                '#'
+                ' https://drive.google.com/file/d/1uBz_Id3dhWeqdmzunUlVYAXew1og7Nh6/view?usp=drivesdk '
                 " value=""/>
             <div class="item-media1 ">
                 <img class="app-icon " src="image/Cert.png"></div> 
@@ -148,12 +148,16 @@
                     </svg>
                 </div>
                 <h13>
-                    <input6 type="button1" onclick="window.location.href='#'" value="2"/>
+                    <input6 type="button1" onclick="window.location.href=
+                        ' https://install.appcenter.ms/users/hoang_anhh/apps/esign-hahios/distribution_groups/esign '
+                        " value="2"/>
                     <div class="item-media2 ">
                         <img class="app-icon " src="image/Esign.jpg"></div> 
                     </h13>   
                     <h14>
-                        <input7 type="button2" onclick="window.location.href='#'" value="1"/>
+                        <input7 type="button2" onclick="window.location.href=
+                            ' https://install.appcenter.ms/users/hoang_anhh/apps/scarlet/distribution_groups/scarlet '
+                            " value="1"/>
                         <div class="item-media3 ">
                             <img class="app-icon " src="image/Scarlet.jpg"></div> 
                         </h14>     
