--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
             <input type="button" onclick="window.location.href='https://youtu.be/bsIba-12pFU'" value="" />
             <i class="fa fa-youtube-play" style="font-size:36px;color:red"></i>
             <br> 
-        </h41>
-            <h41>Cấu hình chặn thu hồi: &ensp;
-                <input1 type="button" onclick="window.location.href='rg.link/chanthuhoichungchi'" value="">
-                <i1 style="font-size:27px" class="fa fa-DNS">&#xf09a;</i1>
-                </h41>
+        </h4>
+        <h41>Không hiểu gì vào đây: &ensp;
+            <input1 type="button" onclick="window.location.href='https://m.facebook.com/groups/595313298643916/?ref=share&mibextid=S66gvF'" value="">
+            <i1 style="font-size:27px" class="fa">&#xf09a;</i1>
+            </h41>
             <h5>
                 Esign FPT
             <input2 type="button" onclick="window.location.href='itms-services:?action=download-manifest&url=https:raw.githubusercontent.com/Nguyenhuyhoan/Esign/main/Esign.FPT.plist'" value=""/>
