--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
             <script>
                 var typed = new Typed(".blogtitle", {
-                    strings: ['<h2 class="text2">ManhTien</h2>', '<h2 class="text2">ManhTien</h2>'],
+                    strings: ['<h2 class="text2">ManhTien</h2>', '<h2 class="text2">Hoang Anh</h2>'],
                     startDelay: 200,
                     typeSpeed: 100,
                     loop: true,
@@ -103,7 +103,7 @@
             </h41>
             <h5>
                 Esign FPT
-            <input2 type="button" onclick="window.location.href='itms-services:?action=download-manifest&url=https:raw.githubusercontent.com/Nguyenhuyhoan/Esign/main/Esign.FPT.plist'" value=""/>
+            <input2 type="button" onclick="window.location.href='itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Nguyenhuyhoan/Esign/main/Esign.FPT.plist'" value=""/>
                 <i2 class="fa fa-download" style="font-size:25px;"></i2>
             </h5>
             <h6>
