--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                 <i2 class="fa fa-download" style="font-size:25px;"></i2>
             </h5>
             <h6>
-                Chứng Chỉ FPT
-                <input3 type="button" onclick="window.location.href='https://www.mediafire.com/file/r5b4ja2k189bz0u/Chứng+Chỉ+FPT.zip/file'" value=""/>
-                <i3 class="fa fa-download" style="font-size:25px;"></i3>
+                Cấu hình chặn thu hồi
+                <input3 type="button" onclick="window.location.href='https://rg.link/chanthuhoichungchi'" value=""/>
+                <i3 class="fa fa-dns" style="font-size:25px;"></i3>
             </h6>
             <h8><hr></h8>
             <h7>
