--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h6>
                 Cấu hình chặn thu hồi
                 <input3 type="button" onclick="window.location.href='https://rg.link/chanthuhoichungchi'" value=""/>
-                <i3 class="fa fa-dns" style="font-size:25px;"></i3>
+                <i3 class="fa fa-download" style="font-size:25px;"></i3>
             </h6>
             <h8><hr></h8>
             <h7>
