--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
             <script>
                 var typed = new Typed(".blogtitle", {
-                    strings: ['<h2 class="text2">ManhTien</h2>', '<h2 class="text2">ManhTi3n</h2>'],
+                    strings: ['<h2 class="text2">ManhTien</h2>', '<h2 class="text2">ManhTien</h2>'],
                     startDelay: 200,
                     typeSpeed: 100,
                     loop: true,
