--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
         <span></span>
         <h1>Hướng Dẫn Chặn Thu Hồi Chứng Chỉ</h1>
         <div id="site-title">
-            <span3 class="blogtitle"><h2 class="text2">HAHiOS</h2></span3><span class="typed-cursor">|</span><span3 class="typed-cursor typed-cursor--blink">|</span3>
+            <span3 class="blogtitle"><h2 class="text2">Manh Tien</h2></span3><span class="typed-cursor">|</span><span3 class="typed-cursor typed-cursor--blink">|</span3>
             <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
             <script>
                 var typed = new Typed(".blogtitle", {
-                    strings: ['<h2 class="text2">ManhTien</h2>', '<h2 class="text2">ManhTien</h2>'],
+                    strings: ['<h2 class="text2">Hoang Anh</h2>', '<h2 class="text2">Hoang Anh</h2>'],
                     startDelay: 200,
                     typeSpeed: 100,
                     loop: true,
@@ -107,8 +107,8 @@
                 <i2 class="fa fa-download" style="font-size:25px;"></i2>
             </h5>
             <h6>
-                Cấu hình chặn thu hồi
-                <input3 type="button" onclick="window.location.href='https://rg.link/chanthuhoichungchi'" value=""/>
+                Chứng Chỉ FPT
+                <input3 type="button" onclick="window.location.href='https://www.mediafire.com/file/r5b4ja2k189bz0u/Chứng+Chỉ+FPT.zip/file'" value=""/>
                 <i3 class="fa fa-download" style="font-size:25px;"></i3>
             </h6>
             <h8><hr></h8>
